Prototype Fixes - Fixed an issue where .toggle-link was causing some unexpected shifting in the content area

--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -389,7 +389,7 @@ pre li {
     margin-bottom: 4rem;
 
     .toggle-link {
-        visibility: hidden;
+        display: none;
         width: 0;
         height: 0;
     }
